[package]
name = "math_traits"
version = "0.2.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]
license = "MIT"
description = "traits to simplify vectorized mathematics"
repository = "https://gitlab.com/sebk/math_traits.git"
homepage = "https://gitlab.com/sebk/math_traits"

[dependencies]
tuple = { version = "0.4", default-features = false }
rand = "0.6"

[features]
simd = ["tuple/impl_simd"]
