[package]
name = "math_traits"
version = "0.2.2"
authors = ["Sebastian Köln <sebk@rynx.org>"]
license = "MIT"
description = "traits to simplify vectorized mathematics"
repository = "https://gitlab.com/sebk/math_traits.git"
homepage = "https://gitlab.com/sebk/math_traits"

[dependencies]
tuple = { version = "0.4", default-features = false, path="../tuple" }
rand = "0.6"
packed_simd = { version = "0.3", optional = true }

[features]
impl_simd = ["tuple/impl_simd", "packed_simd"]
